--- a/download.html
+++ b/download.html
@@ -25,8 +25,10 @@
 </div>
 <div id="content">
 <h2>Download password manager</h2>
+	<div>
 	<a href="passwordmanager.apk" download>
 		<button type="button">Download</button>
 		<script src="button.js"></script>
 	</a>
+	</div>
 </div>
