--- a/download.html
+++ b/download.html
@@ -23,12 +23,6 @@
 		<li><a href="about.html">About</a></li>
 	</ul>
 </div>
-<div>
-<h2>Download password manager</h2>
-	<div id="content">
-	<a href="passwordmanager.apk" download>
-		<button type="button">Download</button>
-		<script src="button.js"></script>
-	</a>
-	</div>
-</div>
+<frameset>
+	<frame src="downloadbtn.html">
+<frameset>
