--- a/downloadbtn.html
+++ b/downloadbtn.html
@@ -1,4 +1,5 @@
 <html>
+	<body>
 <div>
 <h2>Download password manager</h2>
 	<div id="content">
@@ -8,4 +9,5 @@
 	</a>
 	</div>
 </div>
-	<html>
+	</body>
+	</html>
