--- a/download.html
+++ b/download.html
@@ -23,6 +23,6 @@
 		<li><a href="about.html">About</a></li>
 	</ul>
 </div>
-<frameset>
+<frameset cols="*">
 	<frame src="downloadbtn.html">
 <frameset>
