--- a/download.html
+++ b/download.html
@@ -13,7 +13,8 @@
 </head>
 
 
-
+<body>
+	<div id="main-content">
 
 <div id="nav1">
 	<h1><a href="index.html">Password Manager</a></h1>
@@ -26,3 +27,4 @@
 <frameset cols="*">
 	<frame src="downloadbtn.html">
 <frameset>
+	</div>
