--- a/download.html
+++ b/download.html
@@ -24,9 +24,9 @@
 		<li><a href="about.html">About</a></li>
 	</ul>
 </div>
-<frameset cols="*">
-	<frame src="downloadbtn.html">
-<frameset>
+		<a href="Zzz.Droid.Zzz.Droid-Signed.apk" download>
+		<button type="button">Download</button>
+		<script src="button.js"></script>
 	</div>
 	</body>
 		</html>
