--- a/download.html
+++ b/download.html
@@ -24,7 +24,7 @@
 		<li><a href="about.html">About</a></li>
 	</ul>
 </div>
-		<a href="Zzz.Droid.Zzz.Droid-Signed.apk" download>
+		<a href="https://www.dropbox.com/s/7mdbzk98g3xaez9/Zzz.Droid.Zzz.Droid.apk?dl=1" download>
 		<button type="button">Download</button>
 		<script src="button.js"></script>
 	</div>
