--- a/download.html
+++ b/download.html
@@ -24,6 +24,9 @@
 		<li><a href="about.html">About</a></li>
 	</ul>
 </div>
+		<h1 id=warning>Pay attention! This is an alpha version. There may be bugs. There are still many things to be added!</h1>
+		<h2>Alpha version: 1.0</h2>
+		
 		<a href="https://www.dropbox.com/s/7mdbzk98g3xaez9/Zzz.Droid.Zzz.Droid.apk?dl=1" download>
 		<button type="button">Download</button>
 		<script src="button.js"></script>
